<resources>
    <string name="app_name">Salmon Tunnel</string>
    <string name="action_settings">Settings</string>
    <string name="source_port">Source Port</string>
    <string name="target_port">Target Port</string>
    <string name="host">Host</string>
    <string name="password">Password</string>
    <string name="service_device">Service Device</string>
    <string name="buffer_size">Buffer Size (KBytes)</string>
    <string name="remote">Remote</string>
    <string name="salmon_tunnel_running_at">"Salmon Tunnel running at: %1$s"</string>
</resources>